--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Mod.cs" />
     <Compile Include="ModSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScatterValidator_OtherBuildings.cs" />
     <Compile Include="WorkGiver_DigCaveEntrance.cs" />
   </ItemGroup>
   <ItemGroup>
