--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MapTemperature_Patch.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="ModSettings.cs" />
+    <Compile Include="PlaceWorker_Surface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScatterValidator_OtherBuildings.cs" />
     <Compile Include="WorkGiver_DigCaveEntrance.cs" />
@@ -80,8 +81,8 @@
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
       <Version>2.3.6</Version>
-			<IncludeAssets>compile</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
