Hide lightshifts if fogged

--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CaveExit.cs" />
     <Compile Include="CaveExitSurfaceInterest.cs" />
     <Compile Include="CaveMapComponent.cs" />
+    <Compile Include="CompEffecter_NonFogged.cs" />
     <Compile Include="DefModExtension_CaveStabilitizer.cs" />
     <Compile Include="DefsOf.cs" />
     <Compile Include="GenStep_CaveEntrance.cs" />
