--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PlaceWorker_Surface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScatterValidator_OtherBuildings.cs" />
+    <Compile Include="Site_ShouldRemoveMap_Patch.cs" />
     <Compile Include="WorkGiver_DigCaveEntrance.cs" />
   </ItemGroup>
   <ItemGroup>
