Use the same tile for underground

--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -71,6 +71,7 @@
     <Compile Include="JobDriver_Dig.cs" />
     <Compile Include="JobGiver_ExitMap_Patch.cs" />
     <Compile Include="JobGiver_LeaveCave.cs" />
+    <Compile Include="MapInfo_Tile_Patch.cs" />
     <Compile Include="MapTemperature_Patch.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="ModSettings.cs" />
