Reward for reaching the level

--- a/Source/DeepAndDeeper.csproj
+++ b/Source/DeepAndDeeper.csproj
@@ -67,6 +67,7 @@
     <Compile Include="GenStep_ExitToSurfaceInterest.cs" />
     <Compile Include="GenStep_FindCaveExit.cs" />
     <Compile Include="GenStep_CaveInterest_LostPawn.cs" />
+    <Compile Include="GenStep_LevelReward.cs" />
     <Compile Include="GenStep_RocksFromGrid.cs" />
     <Compile Include="GenStep_UndergroundTorches.cs" />
     <Compile Include="GenStep_UndergroundLakes.cs" />
